editing test script

--- a/test.ipynb
+++ b/test.ipynb
@@ -544,7 +544,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 103,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -560,7 +560,7 @@
     "scores, iou_list, acc_list = {},[],[]\n",
     "# initialize model\n",
     "model = get_model()\n",
-    "model.compile(optimizer='adam', loss=focal_loss, metrics=['accuracy']) \n",
+    "# model.compile(optimizer='adam', loss=focal_loss, metrics=['accuracy']) \n",
     "model.load_weights(unet)"
    ]
   },
@@ -606,7 +606,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 104,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -654,14 +654,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 105,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[1m2/2\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 349ms/step\n"
+      "\u001b[1m2/2\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 346ms/step\n"
      ]
     },
     {
@@ -670,7 +670,7 @@
        "Text(0.5, 1.0, 'Prediction')"
       ]
      },
-     "execution_count": 93,
+     "execution_count": 105,
      "metadata": {},
      "output_type": "execute_result"
     },
