finalized testing script

--- a/test.ipynb
+++ b/test.ipynb
@@ -9,28 +9,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 113,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# adding fake labels\n",
+    "real_images = \"../datasets/100nm/Images/Aligned SEM Images/\"\n",
+    "save_dir, real_dir = \"../datasets/100nm/Images/fake_labels/\", \"../datasets/FIB Tomography/Labels/\"\n",
+    "if not os.path.exists(save_dir):\n",
+    "    os.makedirs(save_dir)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 123,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "(100, 128, 128)"
-      ]
-     },
-     "execution_count": 146,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 150/150 [00:01<00:00, 112.80it/s]\n"
+     ]
     }
    ],
    "source": [
-    "a = np.random.rand(50, 128,128) \n",
-    "b = np.random.rand(50, 128,128) \n",
-    "x = []\n",
-    "x.append(a)\n",
-    "x.append(b)\n",
-    "x = np.array(x).reshape(100,128,128)\n",
-    "x.shape"
+    "img_100nm = [im for im in os.listdir(real_images) if \".tif\" in im]\n",
+    "msk_500nm = [os.path.join(real_dir, im) for im in os.listdir(real_dir) if \".png\" in im]\n",
+    "\n",
+    "for i in tqdm(range(len(img_100nm))):\n",
+    "    idx = img_100nm[i].split(' - ')[-1].split('.')[0]\n",
+    "    cv2.imwrite(os.path.join(save_dir, f'{idx}.png'), cv2.imread(msk_500nm[0]))"
    ]
   },
   {
